--- a/Keebin/app/src/main/res/layout/activity_login.xml
+++ b/Keebin/app/src/main/res/layout/activity_login.xml
@@ -88,4 +88,12 @@
         android:id="@+id/button"
         android:onClick="login"/>
 
+    <Button
+        android:text="Ny bruger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
