--- a/Keebin/app/src/main/res/layout/users_loyalty_cards.xml
+++ b/Keebin/app/src/main/res/layout/users_loyalty_cards.xml
@@ -6,5 +6,7 @@
     <ListView
         android:id="@+id/listOfUsersLoyaltyCards"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="#ffffff"
+        android:dividerHeight="5.0sp"/>
 </LinearLayout>
