--- a/Keebin/app/src/main/res/layout/activity_main.xml
+++ b/Keebin/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -9,25 +9,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kasper.pagh.keebin.MainActivity">
+    tools:context="kasper.pagh.keebin.MainActivity"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/responseText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="31dp"></RelativeLayout>
 
-    <Button
-        android:text="ReST tester"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/responseText"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/tester"
-        android:onClick="putUser"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="348dp"
+        android:id="@+id/fragment"
+        android:layout_weight="0.80">
 
-</RelativeLayout>
+    </RelativeLayout>
+
+
+</LinearLayout>
