--- a/Keebin/app/src/main/res/layout/activity_login.xml
+++ b/Keebin/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:hint="                   Email"
-        android:text="b@gmail.com" />
+        android:text="ab@gmail.com" />
 
     <EditText
         android:layout_width="wrap_content"
