--- a/Keebin/app/src/main/res/layout/activity_main.xml
+++ b/Keebin/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/activity_main"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:weightSum="1"
@@ -204,7 +204,7 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/fragment"
-        android:layout_width="363dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
 
