--- a/Keebin/app/src/main/res/layout/map_layout.xml
+++ b/Keebin/app/src/main/res/layout/map_layout.xml
@@ -25,14 +25,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_search_black_24dp"
-            android:onClick="search"
             android:id="@+id/searchbutton_maps"
             />
 
         <SearchView
-            android:id="@+id/search_bar_maps"
+            android:id="@+id/easyGGmofo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             tools:context="kasper.pagh.keebin.MainActivity"
            />
 
