--- a/Keebin/app/src/main/res/layout/activity_login.xml
+++ b/Keebin/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,8 @@
         android:layout_marginBottom="200dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:hint="                   Email"/>
+        android:hint="                   Email"
+        android:text="b@gmail.com" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,7 +38,8 @@
         android:id="@+id/loginPassword"
         android:background="#CDFFFF"
         android:contentDescription="Password"
-        android:hint="      Password"/>
+        android:hint="      Password"
+        android:text="123" />
 
     <TextView
         android:text="Password"
