--- a/Keebin/app/src/main/res/layout/activity_main.xml
+++ b/Keebin/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
@@ -9,14 +9,26 @@
     android:orientation="vertical"
     android:weightSum="1">
 
+
+
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:background="@color/colorToolbar"
         android:minHeight="?attr/actionBarSize"
-        android:titleTextColor="#ffffff">
+        android:titleTextColor="#ffffff"
+        android:gravity="left"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="MenuPopup"
+            android:layout_gravity="left"
+            android:background="@drawable/ic_menu_black_24dp" />
 
         <Button
             android:text="Home"
@@ -24,7 +36,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/Home"
             android:layout_weight="1"
-            android:onClick="link_home" />
+            android:onClick="link_home" android:layout_gravity="center" />
 
         <Button
             android:text="@android:string/search_go"
@@ -32,10 +44,30 @@
             android:layout_height="wrap_content"
             android:id="@+id/Second"
             android:layout_weight="1"
-            android:onClick="link_search" />
+            android:onClick="link_search"
+            android:layout_gravity="center"
+            />
 
+        <Button
+            android:text="Home2.."
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/Home2"
+            android:layout_weight="1"
+            android:onClick="link_home" android:layout_gravity="center" />
+
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="SettingsPopup"
+            android:background="@drawable/ic_more_vert_black_24dp"
+            android:layout_gravity="right"
+
+       />
 
     </android.support.v7.widget.Toolbar>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
