--- a/Keebin/app/src/main/res/layout/activity_main.xml
+++ b/Keebin/app/src/main/res/layout/activity_main.xml
@@ -10,63 +10,170 @@
     android:weightSum="1">
 
 
+    <android.support.v7.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="43dp"
+    android:background="@color/colorToolbar"
+    android:minHeight="?attr/actionBarSize"
+    android:titleTextColor="#ffffff"
+    android:gravity="left"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
+
+
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="MenuPopup"
+        android:layout_gravity="left"
+        android:background="@drawable/ic_menu_white_24dp" />
+
+
+
+
+
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="SettingsPopup"
+        android:background="@drawable/ic_more_vert_white_24dp"
+        android:layout_gravity="right"
+
+        />
+
+
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/logo_action_bar"
+            android:id="@+id/imageView2"
+            android:layout_marginLeft="30dp"
+            />
+
+
+
+        <TextView
+            android:text="Keebin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24dp"
+            android:textColor="@color/text"
+            android:id="@+id/textView5"
+            android:layout_gravity="center"
+
+
+            />
+
+</android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar2"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="43dp"
         android:background="@color/colorToolbar"
         android:minHeight="?attr/actionBarSize"
         android:titleTextColor="#ffffff"
         android:gravity="left"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        >
 
 
-        <ImageButton
-            android:layout_width="wrap_content"
+
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="MenuPopup"
-            android:layout_gravity="left"
-            android:background="@drawable/ic_menu_black_24dp" />
+            android:orientation="horizontal"
+            >
 
-        <Button
-            android:text="Home"
-            android:layout_width="wrap_content"
+
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/Home"
+            android:orientation="horizontal"
             android:layout_weight="1"
-            android:onClick="link_home" android:layout_gravity="center" />
+            >
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="SettingsPopup"
+                android:background="@drawable/ic_home_white_24dp"
+                android:layout_marginLeft="25dp"
 
-        <Button
-            android:text="@android:string/search_go"
-            android:layout_width="wrap_content"
+
+                />
+
+            </LinearLayout>
+
+
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/Second"
+            android:orientation="horizontal"
             android:layout_weight="1"
-            android:onClick="link_search"
-            android:layout_gravity="center"
-            />
+            >
 
-        <Button
-            android:text="Home2.."
-            android:layout_width="80dp"
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="SettingsPopup"
+                android:background="@drawable/ic_loyalty_white_24dp"
+                android:layout_marginLeft="25dp"
+                />
+            </LinearLayout>
+
+
+
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/Home2"
+            android:orientation="horizontal"
             android:layout_weight="1"
-            android:onClick="link_home" android:layout_gravity="center" />
+            >
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="SettingsPopup"
+                android:background="@drawable/ic_search_white_24dp"
+                android:layout_marginLeft="25dp"
+                />
+            </LinearLayout>
 
 
-        <ImageButton
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:onClick="SettingsPopup"
-            android:background="@drawable/ic_more_vert_black_24dp"
-            android:layout_gravity="right"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            >
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="SettingsPopup"
+                android:background="@drawable/ic_place_white_24dp"
+                android:layout_marginLeft="25dp"
 
-       />
+                />
+            </LinearLayout>
+
+        </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
+
+
 
 
     <RelativeLayout
