--- a/Keebin/app/src/main/res/menu/menu.xml
+++ b/Keebin/app/src/main/res/menu/menu.xml
@@ -6,7 +6,8 @@
 
         <item android:title="Menu1"
             android:id="@+id/Menu1"
-            app:showAsAction="always" />
+            app:showAsAction="always"
+             />
 
         <item android:title="Menu2"
             android:id="@+id/Menu2" />
