--- a/Keebin/app/src/main/res/values/colors.xml
+++ b/Keebin/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#400d12</color>
-    <color name="colorToolbar">#3f51b5</color>
+    <color name="text">#ffffff</color>
+    <color name="colorToolbar">#400d15</color>
 </resources>
