fixed crash p14;64R tryk af menu/link optionsne

--- a/Keebin/app/src/main/res/menu/settings.xml
+++ b/Keebin/app/src/main/res/menu/settings.xml
@@ -5,16 +5,13 @@
 
     <item android:title="Setting1"
         android:id="@+id/settings1"
-        app:showAsAction="always"
-        android:onClick="link_maps" />
+        app:showAsAction="always" />
 
     <item android:title="Setting2"
-        android:id="@+id/settings2"
-        android:onClick="link_home"/>
+        android:id="@+id/settings2" />
 
     <item android:title="Setting3"
-        android:id="@+id/Setting3"
-        android:onClick="link_home" />
+        android:id="@+id/Setting3" />
 
 
 </menu>
