--- a/Keebin/app/src/main/res/menu/menu.xml
+++ b/Keebin/app/src/main/res/menu/menu.xml
@@ -3,14 +3,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
         <item android:title="Search"
             android:id="@+id/Menu1"
-            app:showAsAction="always"
-            android:onClick="link_search" />
+            app:showAsAction="always" />
 
         <item android:title="Menu2"
-            android:id="@+id/Menu2"
-            android:onClick="link_search" />
+            android:id="@+id/Menu2" />
 
         <item android:title="Menu3"
-            android:id="@+id/Menu3"
-            android:onClick="link_loyaltycards" />
+            android:id="@+id/Menu3" />
 </menu>
