--- a/Keebin/app/src/main/res/layout/activity_main.xml
+++ b/Keebin/app/src/main/res/layout/activity_main.xml
@@ -100,17 +100,26 @@
             android:orientation="horizontal"
             android:layout_weight="1"
             >
+        </LinearLayout>
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="SettingsPopup"
+                android:onClick="link_home"
                 android:background="@drawable/ic_home_white_24dp"
-                android:layout_marginLeft="25dp"
 
 
-                />
 
+                android:scaleType="centerInside" />
+
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
             </LinearLayout>
+
 
 
 
@@ -121,17 +130,24 @@
             android:orientation="horizontal"
             android:layout_weight="1"
             >
+        </LinearLayout>
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="SettingsPopup"
+                android:onClick="link_loyaltycards"
                 android:background="@drawable/ic_loyalty_white_24dp"
-                android:layout_marginLeft="25dp"
                 />
+
+
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
             </LinearLayout>
-
-
 
 
         <LinearLayout
@@ -141,15 +157,14 @@
             android:orientation="horizontal"
             android:layout_weight="1"
             >
+            </LinearLayout>
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="SettingsPopup"
+                android:onClick="link_search"
                 android:background="@drawable/ic_search_white_24dp"
-                android:layout_marginLeft="25dp"
                 />
-            </LinearLayout>
-
 
 
         <LinearLayout
@@ -159,14 +174,33 @@
             android:orientation="horizontal"
             android:layout_weight="1"
             >
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
+            </LinearLayout>
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="SettingsPopup"
+                android:onClick="link_maps"
                 android:background="@drawable/ic_place_white_24dp"
-                android:layout_marginLeft="25dp"
 
                 />
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
             </LinearLayout>
 
         </LinearLayout>
