--- a/Keebin/app/src/main/res/layout/selectedshop.xml
+++ b/Keebin/app/src/main/res/layout/selectedshop.xml
@@ -36,7 +36,7 @@
             <TextView
                 android:id="@+id/ShopPictureOverlay"
                 android:layout_width="wrap_content"
-                android:text="yolo swag"
+                android:text=""
                 android:gravity="center"
                 android:layout_alignLeft="@id/ShopPicture"
                 android:layout_alignTop="@id/ShopPicture"
@@ -51,7 +51,7 @@
 
 
             <TextView
-                android:text="TextView"
+                android:text=""
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
