--- a/Keebin/app/src/main/res/layout/activity_login.xml
+++ b/Keebin/app/src/main/res/layout/activity_login.xml
@@ -65,9 +65,10 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo"
         android:id="@+id/imageView"
-        android:layout_above="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_above="@+id/textView3"
+        android:layout_marginBottom="20sp"
+        android:layout_centerInParent="true"
+        />
 
     <TextView
         android:text="KEEBIN"
