--- a/Keebin/app/src/main/res/layout/loyaltycardrow.xml
+++ b/Keebin/app/src/main/res/layout/loyaltycardrow.xml
@@ -7,12 +7,14 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="127dp"
-        android:layout_height="158dp" />
+        android:layout_width="0dp"
+        android:layout_height="158dp"
+        android:layout_weight="0.33"/>
 
     <ImageView
         android:id="@+id/beancounter"
+        android:layout_width="0dp"
         android:layout_height="158dp"
-        android:layout_width="250dp" />
+        android:layout_weight="0.66"/>
 
 </LinearLayout>
