--- a/Keebin/app/src/main/res/layout/users_loyalty_cards.xml
+++ b/Keebin/app/src/main/res/layout/users_loyalty_cards.xml
@@ -7,6 +7,7 @@
         android:id="@+id/listOfUsersLoyaltyCards"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="5dp"
         android:divider="#ffffff"
         android:dividerHeight="10.0sp"/>
 </RelativeLayout>
