--- a/Keebin/app/src/main/res/layout/coffee_add.xml
+++ b/Keebin/app/src/main/res/layout/coffee_add.xml
@@ -3,19 +3,34 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_centerVertical="true">
+              android:weightSum="1">
+
+
+    <TextView
+        android:text="Vær venlig at give din telefon til en repræsentant fra caféen."
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:id="@+id/textView4"
+        android:paddingTop="20sp"
+        android:layout_weight="0.13"
+        android:layout_gravity="center"/>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/coffeeCode"
-        android:hint="coffeeCode"/>
+        android:hint="coffeeCode"
+        android:layout_gravity="center"
+        />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/numberOfCoffeesBought"
-        android:hint="numberOfCoffeesBought"/>
+        android:hint="numberOfCoffeesBought"
+        android:layout_gravity="center"/>
 
     <Button
         android:text="add"
@@ -23,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:id="@+id/addCoffee"
-        android:onClick="add"/>
+        android:onClick="add"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
