rettelser til eksamen

--- a/Keebin/app/src/main/res/layout/map_layout.xml
+++ b/Keebin/app/src/main/res/layout/map_layout.xml
@@ -22,34 +22,29 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <ImageButton
+            android:id="@+id/searchbutton_maps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_search_black_24dp"
-            android:id="@+id/searchbutton_maps"
-            />
+            android:background="@drawable/ic_search_black_24dp" />
 
         <SearchView
             android:id="@+id/easyGGmofo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            tools:context="kasper.pagh.keebin.MainActivity"
-           />
-
+            tools:context="kasper.pagh.keebin.MainActivity" />
 
 
     </android.support.v7.widget.Toolbar>
 
 
-
-
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:map="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/mapFragment"
-android:name="com.google.android.gms.maps.SupportMapFragment"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="MainActivity" />
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/mapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="MainActivity" />
 
 </LinearLayout>
