--- a/Keebin/app/src/main/res/layout/coffee_shop_row.xml
+++ b/Keebin/app/src/main/res/layout/coffee_shop_row.xml
@@ -5,7 +5,7 @@
               android:padding="5dp" >
 
     <ImageView
-        android:id="@+id/SearchLogo"
+        android:id="@+id/logo"
         android:layout_width="100px"
         android:layout_height="100px"
         android:layout_marginLeft="5px"
